--- a/org/Labbook.org
+++ b/org/Labbook.org
@@ -1265,6 +1265,10 @@
             decl igaus = Int("igaus")
             decl inode = Int("inode")
             decl jnode = Int("jnode")
+            decl idime = Int("idime")
+            decl jdime = Int("jdime")
+            decl idofv = Int("idofv")
+            decl jdofv = Int("jdofv")
             decl gpsp1_p = Real("gpsp1_p", :dim => [Dim(opts[:vector_length]),Dim(pgaus)])
             decl gpsp1_v = Real("gpsp1_v", :dim => [Dim(opts[:vector_length]),Dim(pgaus)])
 
@@ -1523,6 +1527,82 @@
                   })  
           end
         #+END_SRC
+******* Third nest
+        Different loop reorganisation can be made here. Fact1 coudl be
+        computed more efficiently. The memory access to gpcar are made
+        in a contiguous way but by column. It access different memory
+        location pnode^2 x ndime times for gpcar. Same thing for elauu,
+        there are 2.(2.ndime^2 . pnode^2 + ndime/x . pnode ). The 1/x
+        come from contiguous memory access that allow to take
+        advantages of L1 cache with a size of cache x. Because gpcar
+        is accessed sequentially to compute elauu. Here to compute elauu
+        we can either use the cache for elauu or gpcar.
+        Access to elauu are most costly than gpcar because it is accessed more
+        often. So made be it worth to reorganize loops to access elauu
+        the more sequentially possible.
+
+        #+BEGIN_SRC ruby :tangle /tmp/alya.rb
+          if opts[:nests].include? 3 then
+            for_inode = For(inode,1,pnode)
+            for_jnode = For(jnode,1,pnode)
+            for_idime = For(idime,1,ndime)
+            for_jdime = lambda{ |dim| return For(jdime,1,dim) }
+
+            block1 = lambda{
+              pr fact[1] === gpvis[1,igaus] * gpvol[1,igaus] * gpcar[1,idime,jnode,igaus]
+            }
+
+            block2 = lambda{
+              pr idofv === (inode-1)*ndime + idime
+            }
+
+            block3 = lambda{
+              pr jdofv === (jnode-1)*ndime + jdime
+              pr elauu[1,idofv,jdofv] === elauu[1,idofv,jdofv] + fact[1] * gpcar[1,jdime,inode,igaus]
+            }
+
+            block4 = lambda{
+              # pr fact[1] === gpvis[1,igaus] * -0.66666668653488159 * gpvol[1,igaus] * gpcar[1,idime,inode,igaus]
+              pr fact[1] === gpvis[1,igaus] * (-2.0 / 3.0) * gpvol[1,igaus] * gpcar[1,idime,inode,igaus]
+            }
+
+            block5 = lambda{
+              pr jdofv === (jnode-1)*ndime + jdime
+              pr elauu[1,idofv,jdofv] === elauu[1,idofv,jdofv] + fact[1] * gpcar[1,jdime,jnode,igaus]
+            }
+
+
+            pr If(fvins_nsi > 0.9){
+              for1 = []
+              2.times{|j|
+                dim = j+2
+                for1[j] = For(igaus,1,pgaus){ 
+
+                  opn for_inode
+                    opn for_idime
+                      block2.call
+                      opn for_jnode
+                        block1.call
+                        pr for_jdime.call(dim).unroll, &block3
+                      close for_jnode
+                      pr If(fvins_nsi == 2.0){
+                        block4.call
+                        opn for_jnode
+                          pr for_jdime.call(dim).unroll, &block5
+                        close for_jnode
+                      }
+                    close for_idime
+                  close for_inode
+                }
+              }
+              pr If(ndime == 2 => lambda{
+                      pr for1[0]
+                    }, else: lambda{
+                      pr for1[1]
+                    })  
+            }
+          end
+        #+END_SRC
 ******* Closing procedure
         #+BEGIN_SRC ruby :tangle /tmp/alya.rb
 
@@ -1561,7 +1641,7 @@
           pgaus = 100
           pevat = 100
           ndime = 2
-          fvins_nsi = 1.0
+          fvins_nsi = 2.0
           kfl_lumped = 1
           kfl_limit_nsi = 1
           kfl_sgsti_nsi = 1
