--- a/org/Labbook.org
+++ b/org/Labbook.org
@@ -2455,7 +2455,7 @@ END SUBROUTINE orig1
       a = Int("a",:dir => :out, :dim => [Dim(10)]) 
 
       p1 = Procedure::new("p1",[a]){
-        decl i = Int("i")
+        i = Int("i")
         for1 = For(i,1,10){
           pr a[i] === a[i] + i
         }
@@ -2472,7 +2472,6 @@ END SUBROUTINE orig1
     #+RESULTS:
     #+begin_example
     void p1(int32_t * a){
-      int32_t i;
       a[1 - (1)] = a[1 - (1)] + 1;
       a[2 - (1)] = a[2 - (1)] + 2;
       a[3 - (1)] = a[3 - (1)] + 3;
@@ -2596,6 +2595,205 @@ END SUBROUTINE orig1
 
     #+RESULTS:
     | :duration=>1.037e-06 |
+
+*** Modular loops
+    #+BEGIN_SRC ruby
+      require 'BOAST'
+      include BOAST
+      require 'narray'
+
+      decl a = Int("a", :dir => :inout, :dim => [Dim(4)])
+
+      p = Procedure("foo",[a]){
+        decl i = Int("i")
+        decl j = Int("j")
+        decl b = Int("b")
+
+        f1 = For(i,1,3)
+        f2 = For(j,1,4)
+        pr b === 0
+
+        opn f2
+          opn f1
+            pr b === b + 1
+            pr a[j] === b
+          close f1
+        close f2
+      }
+
+      k = p.ckernel
+      k.build
+      a = NArray.int(4)
+      k.run(a)
+      a
+                
+    #+END_SRC
+
+    #+RESULTS:
+    : NArray.int(4): 
+    : [ 3, 6, 9, 12 ]
+
+    #+BEGIN_SRC ruby
+      require 'BOAST'
+      include BOAST
+      require 'narray'
+
+      decl a = Int("a", :dir => :inout, :dim => [Dim(4)])
+
+      p = Procedure("foo",[a]){
+        decl i = Int("i")
+        decl j = Int("j")
+        decl b = Int("b")
+
+        (2..3).each{|dim|
+        f1 = For(i,1,3)
+        f2 = For(j,1,dim)
+        block = lambda {
+            pr b === b + 1
+            pr a[j] === b
+        }
+
+        pr b === 0
+       
+        f4 = lambda{ pr f2.unroll, &block}
+
+        lambda{ pr f1, &f4}.call
+        }
+      }
+
+      k = p.ckernel
+      k.build
+      a = NArray.int(4)
+      # k.run(a)
+      # a
+      k
+                
+    #+END_SRC
+
+    #+RESULTS:
+    #+begin_example
+    SUBROUTINE foo(a)
+      integer, parameter :: wp=kind(1.0d0)
+      integer(kind=4), intent(inout), dimension(4) :: a
+      integer(kind=4) :: i
+      integer(kind=4) :: j
+      integer(kind=4) :: b
+      b = 0
+      do i = 1, 3, 1
+        b = b + 1
+        a(1) = b
+        b = b + 1
+        a(2) = b
+      end do
+      b = 0
+      do i = 1, 3, 1
+        b = b + 1
+        a(1) = b
+        b = b + 1
+        a(2) = b
+        b = b + 1
+        a(3) = b
+      end do
+    END SUBROUTINE foo
+#+end_example
+
+    #+BEGIN_SRC ruby
+      require 'BOAST'
+      include BOAST
+      require 'narray'
+
+      p = Procedure("foo"){
+        decl inode = Int("inode")
+        decl jnode = Int("jnode")
+        decl idime = Int("idime")
+        decl jdime = Int("jdime")
+        decl igaus = Int("igaus")
+        decl idofv = Int("idofv")
+        decl jdofv = Int("jdofv")
+
+        decl pnode = Int("pnode")
+        decl ndime = Int("ndime")
+        decl pgaus = Int("pgaus")
+        decl gpvis = Int("gpvis", :dim => [Dim(1),Dim(5)])
+        decl gpvol = Int("gpvol", :dim => [Dim(1),Dim(5)])
+        decl gpcar = Int("gpcar", :dim => [Dim(1),Dim(3),Dim(5)])
+        decl elauu = Int("elauu", :dim => [Dim(1),Dim(5),Dim(5)])
+        decl fact1 = Int("fact1")
+        
+        for_inode = For(inode,1,pnode)
+        for_jnode = For(jnode,1,pnode)
+        for_idime = For(idime,1,ndime)
+
+        for_jdime = lambda{|dim|
+          return For(jdime,1,dim)
+        }
+
+        block1 = lambda{
+          pr fact1 === gpvis[1,igaus] * gpvol[1,igaus] * gpcar[1,idime,jnode,igaus]
+        }
+
+        block2 = lambda{
+          pr idofv === (inode-1)*ndime + idime
+        }
+
+        block3 = lambda{
+          # pr jdofv === (jnode-1)*ndime + jdime
+          pr jdofv === ndime + jdime
+          # pr elauu[1,idofv,jdofv] === elauu[1,idofv,jdofv] * fact1 * gpcar[1,idime,inode,igaus]
+        }
+
+        dim = 3
+
+        pr For(igaus,1,pgaus){ 
+          opn for_inode
+          opn for_idime
+          # block2.call
+          opn for_jnode
+          block1.call
+          lambda{ pr for_jdime.call(dim).unroll, &block3 }.call
+          close for_jnode
+          close for_idime
+          close for_inode
+        }
+        
+      }
+      k = p.ckernel
+    #+END_SRC
+
+    #+RESULTS:
+    #+begin_example
+    SUBROUTINE foo()
+      integer, parameter :: wp=kind(1.0d0)
+      integer(kind=4) :: inode
+      integer(kind=4) :: jnode
+      integer(kind=4) :: idime
+      integer(kind=4) :: jdime
+      integer(kind=4) :: igaus
+      integer(kind=4) :: idofv
+      integer(kind=4) :: jdofv
+      integer(kind=4) :: pnode
+      integer(kind=4) :: ndime
+      integer(kind=4) :: pgaus
+      integer(kind=4), dimension(1, 5) :: gpvis
+      integer(kind=4), dimension(1, 5) :: gpvol
+      integer(kind=4), dimension(1, 3, 5) :: gpcar
+      integer(kind=4), dimension(1, 5, 5) :: elauu
+      integer(kind=4) :: fact1
+      do igaus = 1, pgaus, 1
+        do inode = 1, pnode, 1
+          do idime = 1, ndime, 1
+            do jnode = 1, pnode, 1
+              fact1 = ((gpvis(1, igaus)) * (gpvol(1, igaus))) * (gpcar(1, &
+    &idime, jnode))
+              jdofv = ndime + 1
+              jdofv = ndime + 2
+              jdofv = ndime + 3
+            end do
+          end do
+        end do
+      end do
+    END SUBROUTINE foo
+#+end_example
 
 ** Ruby
 *** Meta
